// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`common/component/element/input should call passed callbacks 1`] = `
<input
  className="m-form__control--text"
  id="input-callbacks"
  name="input-callbacks"
  onBlur={[MockFunction]}
  onChange={[MockFunction]}
  placeholder=""
  type="text"
/>
`;

exports[`common/component/element/input should call passed callbacks 2`] = `
<input
  className="m-form__control--text"
  id="input-callbacks"
  name="input-callbacks"
  onBlur={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
  onChange={[MockFunction]}
  placeholder=""
  type="text"
/>
`;

exports[`common/component/element/input should call passed callbacks 3`] = `
<input
  className="m-form__control--text"
  id="input-callbacks"
  name="input-callbacks"
  onBlur={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
  onChange={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
  placeholder=""
  type="text"
/>
`;

exports[`common/component/element/input should render correctly with default callbacks 1`] = `
<input
  aria-required={true}
  className="m-form__control--text input"
  classNameLabel="input-label"
  id="input"
  name="input"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Test input placeholder"
  required={true}
  type="text"
  value="4"
/>
`;

exports[`common/component/element/input should render correctly with default callbacks 2`] = `
<input
  aria-required={true}
  className="m-form__control--text input"
  classNameLabel="input-label"
  id="input"
  name="input"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Test input placeholder"
  required={true}
  type="text"
  value="4"
/>
`;

exports[`common/component/element/input should render correctly with default callbacks 3`] = `
<input
  aria-required={true}
  className="m-form__control--text input"
  classNameLabel="input-label"
  id="input"
  name="input"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Test input placeholder"
  required={true}
  type="text"
  value="4"
/>
`;
